<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="310dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="49dp"
                android:layout_height="47dp"
                android:text="X"
                android:textColor="#990000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Edit Capacity"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="234dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="316dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Salvatori Computer Science Center"
                android:textAlignment="center"
                android:textColor="#565656"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="234dp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="number"
                android:textColor="#272727"
                app:layout_constraintBottom_toBottomOf="@+id/button7"
                app:layout_constraintEnd_toEndOf="@+id/button7"
                app:layout_constraintStart_toStartOf="@+id/button7"
                app:layout_constraintTop_toTopOf="@+id/button7" />

            <Button
                android:id="@+id/button7"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:backgroundTint="#00FFFFFF"
                android:clickable="false"
                android:stateListAnimator="@null"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.02"
                android:stateListAnimator="@null"
                android:text="SUBMIT"
                android:textSize="10sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>