...
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#00990000"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.02"
            android:stateListAnimator="@null"
            android:text="IMPORT CSV"
            android:textColor="@color/red"
            android:textSize="13sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp" />

...
